# smd_ardrone2-release

./: CMakeLists.txt  bloom.conf  debian.store  mainpage.dox  nodelet_plugins.xml  package.xml  patches.conf  ros-groovy-smd-ardrone2.spec  rpm.store  sources
debian/: changelog  control  gbp.conf  rules
include/smd_ardrone2/: ARDrone2_Control.hpp  ARDrone2_H264.hpp  ARDrone2_Helper.hpp
launch/: ardrone2.launch  ardrone2_with_helper.launch
src/: ARDrone2_Control.cpp  ARDrone2_H264.cpp  ARDrone2_Helper.cpp
srv/: DroneAnimate.srv  DroneConfig.srv  DroneLEDAnimate.srv  DroneSetCam.srv
